fix(comment-block): add word-break on comment-block

--- a/src/components/comment-block/style/lumapps/_index.scss
+++ b/src/components/comment-block/style/lumapps/_index.scss
@@ -123,6 +123,8 @@
         #{$self}--theme-dark > #{$self}__wrapper & {
             color: lumx-theme-color-variant('light', 'N');
         }
+
+        word-break: break-word;
     }
 
     &__actions {
